// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractMethodCall: action close model with contract key 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_CLOSE_MODAL",
}
`;

exports[`ContractMethodCall: action fetch arguments failure 1`] = `
Object {
  "error": "ERROR",
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_FETCH_ARGS_FAILURE",
}
`;

exports[`ContractMethodCall: action fetch arguments request 1`] = `
Object {
  "address": "8070db2390462e2b5748085bde1350590e08bb17",
  "chainId": "1c8792a7e43d132487500936d946f510e7ff51635838060757bf886828403a14",
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "name": "Greeter",
  "symbol": "greet",
  "type": "METHOD_CALL_FETCH_ARGS_REQUEST",
}
`;

exports[`ContractMethodCall: action fetch arguments success 1`] = `
Object {
  "args": Object {
    "_greeting": Object {
      "dynamic": true,
      "index": 0,
      "type": "String",
    },
  },
  "isPayable": true,
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_FETCH_ARGS_SUCCESS",
}
`;

exports[`ContractMethodCall: action method call failure 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "result": "ERROR",
  "type": "METHOD_CALL_FAILURE",
}
`;

exports[`ContractMethodCall: action method call request 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "payload": Object {
    "args": Object {},
    "contractAddress": "8070db2390462e2b5748085bde1350590e08bb17",
    "contractName": "Greeter",
    "methodName": "greet",
    "password": "pass",
    "userAddress": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
    "username": "tanuj",
  },
  "type": "METHOD_CALL_REQUEST",
}
`;

exports[`ContractMethodCall: action method call success 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "result": Array [
    Object {
      "data": Object {
        "contents": Array [
          "200",
        ],
        "tag": "Call",
      },
      "hash": "31bcbc86cb6fdd273443406ae27906485fccc8475b269de04878d9b797c0f47e",
      "status": "Success",
      "txResult": Object {
        "appName": "",
        "blockHash": "36d2629fb5ef27457eb70a87cd886284d0ac7c197f7b3eaf1102edbb8e3518b1",
        "chainId": null,
        "contractsCreated": "",
        "contractsDeleted": "",
        "deletedStorage": "",
        "etherUsed": "0000000000000000000000000000000000000000000000000000000005f5e100",
        "gasUsed": "0000000000000000000000000000000000000000000000000000000005f5e100",
        "kind": "SolidVM",
        "message": "Success!",
        "newStorage": "",
        "orgName": "Blockapps",
        "response": "(200)",
        "stateDiff": "",
        "status": "success",
        "time": 0.001361853,
        "trace": "",
        "transactionHash": "31bcbc86cb6fdd273443406ae27906485fccc8475b269de04878d9b797c0f47e",
      },
    },
  ],
  "type": "METHOD_CALL_SUCCESS",
}
`;

exports[`ContractMethodCall: action open model with contract key 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_OPEN_MODAL",
}
`;
